--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -14,17 +14,18 @@
         <item name="windowActionBar">false</item>
         <item name="windowNoTitle">true</item>
         <!-- Customize your theme here. -->
+
     </style>
 
     <style name="menu_buttons">
         <item name="android:layout_width">185dp</item>
         <item name="android:layout_height">140dp</item>
         <item name="android:radius">15dp</item>
-        <item name="backgroundTint">#3A2506</item>
-        <item name="android:textColor">#EEEEEE</item>
+        <item name="backgroundTint">#000000</item>
+        <item name="android:textColor">#FFFFFF</item>
         <item name="android:textSize">20sp</item>
         <item name="android:textStyle">bold</item>
-        <item name="strokeColor">@color/black</item>
+        <item name="strokeColor">@color/white</item>
         <item name="strokeWidth">4dp</item>
     </style>
 
