--- a/app/src/main/res/layout/activity_transport_list.xml
+++ b/app/src/main/res/layout/activity_transport_list.xml
@@ -4,13 +4,15 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+
+    android:background="@drawable/background"
     tools:context=".listActivity.TransportListActivity">
 
-    <TextView
-        android:id="@+id/textView2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="транспорт activity"
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rcViewTransport"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
