--- a/app/src/main/res/layout/activity_medicine_list.xml
+++ b/app/src/main/res/layout/activity_medicine_list.xml
@@ -4,16 +4,25 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".listActivity.MedicineListActivity">
+    android:background="@drawable/background"
+    tools:context=".medicine.MedicineListActivity">
 
-    <TextView
-        android:id="@+id/textView2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="медицина activity"
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rcViewMedicine"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.0"
+        tools:listitem="@layout/transport_item"
+        app:spanCount="3"
+        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
+        />
+
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
